# I-ve-Got-the-Power-Lab

./: CMakeLists.txt
src/: lab2.cpp  lab2.hpp
tests/: lab2_test.cpp
